# neural-network

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
src/: Makefile  activation.cpp  activation.h  layer.cpp  layer.h  loss.cpp  loss.h  main.cpp  matrix.cpp  matrix.h  neural_network.cpp  neural_network.h  optimizers.cpp  optimizers.h
